<resources>
    //Main Activity Strings
    <string name="newUser">NEW</string>
    <string name="chooseUser">Choose a User!</string>
    <string name="white">White</string>
    <string name="grey">Grey</string>
    <string name="cyan">Cyan</string>
    <string name="chooseBGColor">Choose a Background Color</string>
    <string name="chooseIcon">Choose an Icon</string>
    <string name="randomName">Random Name</string>
    <string name="checkMark">✔</string>
    <string name="userName">User Name</string>
    <string name="chooseNumLives">Choose Number of Lives</string>
    <string name="icon1">Boy</string>
    <string name="icon2">Girl</string>
    <string name="icon3">Snake</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>

    <string name="app_name">GameBoi</string>
    <string name="toMath">Next</string>
    <string name="toSimon">Next</string>
    <string name="titleMathGame">Math Game</string>
    <string name="titleSimonGame">FlashColors</string>
    <string name="toRock">Next</string>
    <string name="titleRock">Rock Paper Scisscors</string>
    <string name="textview">TextView</string>
    <string name="rock">Rock</string>
    <string name="rock_paper_scissor_game">Rock Paper Scissor Game</string>
    <string name="you_won">"You won this round! Press continue to play again. "</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>
    <string name="continue_game">Continue</string>
    <string name="computerchoice">Our Choice:</string>

    <string name="red">RED</string>
    <string name="yellow">YELLOW</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>
    <string name="lose1">-1</string>
    <string name="flashLoss">"You lost a life! "</string>
    <string name="flashWin1">Congrats! You beat the level</string>
    <string name="flashGames">You have won:</string>
    <string name="flashLives">Lives Left:</string>
    <string name="mathScore">Level 1 Score:</string>
    <string name="flashLvlScore">Level 2 Score:</string>
    <string name="RPSScore">Level 3 Score:</string>
    <string name="flashTotal">Total Score:</string>
    <string name="flashWin2">Select \"Next\" to Continue</string>
    <string name="flashScore">120</string>
    <string name="score">Score:</string>
    <string name="icon">icon</string>

    <string name="lost_round">You have lost this round! Press Continue to play again.</string>
    <string name="try_again">No one won this round! Try again.</string>
    <string name="won_rps">Congratulations! You won the Rock Paper Scissors game!</string>
    <string name="lost_rps">Oh no! You lost the Rock Paper Scissors Game ;(</string>
    <string name="leaderboard">Leaderboard</string>

    //MathGame strings:
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">Clear</string>
    <string name="enter">Enter</string>
    <string name="scoreZero">SCORE: 0</string>
    <string name="submit_round">SUBMIT</string>
    <string name="start_btn">START</string>
    <string name="yourchoice">Your Choice:</string>
    <string name="lbname">Name</string>
    <string name="highscores">Highscores</string>
    <string name="pandaBTN">Panda</string>
    <string name="gameboiSign">GAMEBOI</string>
    <string name="leaderboard_text">Great Job! Play Again?</string>
    <string name="todo">TODO</string>


    //LeaderBoard

    <string-array name="scoreboard_titles">
        <item>Highscores</item>
        <item>Current Scores</item>
        <item>Multiplier</item>
        <item>Lives</item>

    </string-array>
    <string name="name">Name</string>
    <string name="instructions">Instructions</string>
    <string name="ClearVal">Clear</string>
    <string name="back">Back</string>


    <string name="text_for_mathgame">
        MATH GAME INSTRUCTIONS - EASY LEVEL:
        \n
        Math game will display an equation and using the displayed
        buttons you must enter the answer and then press submit.
        If you answered the question correctly you will receive
        a point. An incorrect answer receives no points. If you
        answer 3 incorrectly you lose a life. There are 5 rounds
        total so if you have less than 3 incorrect answers you
        will win the game.
        \n
        \n
        MATH GAME INSTRUCTIONS - HARD LEVEL:
        \n
        There are 5 rounds total so if you have less than 3 incorrect answers you
        will win the game. The hard level has more difficult equations to solve.
    </string>

    <string name="text_for_flashgame">
        FLASH GAME INSTRUCTIONS - EASY LEVEL:
        \n
        If you still have lives remaining after playing math game,
        you will be taken to flash colours game. There, you press
        start and a pattern of colours will appear. Your goal is to
        remember the pattern and then click the corresponding
        colour buttons to the pattern you saw. If you identified the
        pattern correctly, a message will appear saying you were
        correct and you will be awarded a point. If you identify
        2 patterns incorrectly, you will lose the flash colours
        game and you will lose a life. A total of 4 rounds will be played.

        \n
        \n
        FLASH GAME INSTRUCTIONS - HARD LEVEL:
        \n
        If you identify 2 patterns incorrectly, you will lose the flash colours
        game and you will lose a life. The hard level simply has
        2 more colour buttons, black and white.
    </string>

    <string name="text_for_rpsgame">
        ROCK PAPER SCISSORS GAME INSTRUCTIONS - EASY LEVEL:
        \n
        If you have more than 0 lives left after playing Flash Colours
        game, you will be taken to Rock Paper Scissors game. You
        can click the rock button, paper button or the scissors
        button based on what you want to use for this round.
        Then you will be taken to a screen that tells you if you
        won playing against the computer or not. If you win 3
        rounds before losing 2, you will win the Rock Paper Scissors game.
        \n
        HOW TO PLAY;
        Scissors cuts paper, paper covers rock, rock crushes scissors.
        \n
        \n
        ROCK PAPER SCISSORS GAME INSTRUCTIONS - HARD LEVEL:
        \n
        The hard level for Rock Paper Scissors requires 3 wins before 2 losses as well but now their
        are more buttons to choose from.
        \n
        HOW TO PLAY;
        Scissors cuts paper, paper covers rock, rock crushes lizard, lizard poisons spock, spock
        smashes scissors, scissors decapitates lizard, lizard eats paper, paper disproves spock,
        spock vaporizes rock and rock crushes scissors.

    </string>

    <string name="text_for_bonus">
        BONUS INSTRUCTIONS:

        After every game you will be taken to a spinner that has
        the power to increase your multiplier which inevitably
        multiplies your points. There are also multiple hidden
        features throughout the games that can also increase
        your multiplier so good luck!

    </string>

    <string name="Lives">Lives:</string>
    <string name="Multiplier">Multiplier:</string>
    <string name="White">White</string>
    <string name="Black">Black</string>

    // Spinner Bonus Game
    <string name="spin">SPIN</string>
    <string name="nextLevel">Next</string>
    <string name="bonusSpinner">Bonus Multiplier</string>
    <string name="oldMultiplier">Current Multiplier:</string>
    <string name="newMultiplier">New Multiplier:</string>
    <string name="spinnerImg">Spinner Wheel</string>
    <string name="pointerImg">Pointer</string>
    <string name="EASY">EASY</string>
    <string name="HARD">HARD</string>
</resources>
