<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MathGame.MathGame">

    <Button
        android:id="@+id/btn5"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:onClick="pressFive"
        android:text="@string/five"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn8" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="68dp"
        android:onClick="pressSix"
        android:text="@string/six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn9" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="15dp"
        android:onClick="pressOne"
        android:text="@string/one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="15dp"
        android:onClick="pressFour"
        android:text="@string/four"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="68dp"
        android:onClick="pressNine"
        android:text="@string/nine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="268dp"
        android:onClick="pressSeven"
        android:text="@string/seven"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="15dp"
        android:onClick="pressEight"
        android:text="@string/eight"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="118dp"
        android:layout_height="62dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:onClick="pressClear"
        android:text="@string/clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="119dp"
        android:layout_height="61dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="28dp"
        android:onClick="pressEnter"
        android:text="@string/enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />

    <TextView
        android:id="@+id/responseView"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="21dp"
        android:gravity="center_vertical|end"
        android:text="@string/zero"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/btn9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:onClick="pressTwo"
        android:text="@string/two"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/btn5" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="21dp"
        android:onClick="pressZero"
        android:text="@string/zero"
        app:layout_constraintEnd_toStartOf="@+id/btnEnter"
        app:layout_constraintStart_toEndOf="@+id/btnClear"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="68dp"
        android:onClick="pressThree"
        android:text="@string/three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn6" />

    <TextView
        android:id="@+id/equationDisplay"
        android:layout_width="244dp"
        android:layout_height="49dp"
        android:layout_marginStart="81dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="28dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/responseView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/mathGameScore"
        android:layout_width="151dp"
        android:layout_height="33dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="243dp"
        android:text="@string/scoreZero"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/avatarIcon"
        android:layout_width="86dp"
        android:layout_height="89dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="29dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mathGameScore"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/userlogo" />

    <ImageView
        android:id="@+id/lifeOne"
        android:layout_width="43dp"
        android:layout_height="34dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClear"
        app:srcCompat="@drawable/userlogo" />

    <ImageView
        android:id="@+id/lifeTwo"
        android:layout_width="55dp"
        android:layout_height="39dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toEndOf="@+id/lifeOne"
        app:layout_constraintTop_toBottomOf="@+id/btn0"
        app:srcCompat="@drawable/userlogo" />

    <ImageView
        android:id="@+id/lifeThree"
        android:layout_width="60dp"
        android:layout_height="53dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="31dp"
        app:layout_constraintStart_toEndOf="@+id/lifeTwo"
        app:layout_constraintTop_toBottomOf="@+id/btnEnter"
        app:srcCompat="@drawable/userlogo" />

    <TextView
        android:id="@+id/multiplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="77dp"
        android:text="TextView"
        app:layout_constraintEnd_toStartOf="@+id/avatarIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>