<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartupPages.Instructions">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="298dp"
        android:layout_height="101dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="57dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/howtplaytitle" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="329dp"
        android:layout_height="98dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="54dp"
        android:scrollbars="vertical"
        android:text="@string/text_for_flashgame"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="329dp"
        android:layout_height="99dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="54dp"
        android:scrollbars="vertical"
        android:text="@string/text_for_rpsgame"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView40" />

    <Button
        android:id="@+id/button2"
        android:layout_width="101dp"
        android:layout_height="35dp"
        android:layout_marginStart="275dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="32dp"
        android:onClick="backButton"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="325dp"
        android:layout_height="111dp"
        android:layout_margin="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="18dp"
        android:scrollbars="vertical"
        android:text="@string/text_for_mathgame"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@+id/textView40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="24dp"
        android:scrollbars="vertical"
        android:text="@string/text_for_bonus"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView42"
        app:layout_constraintVertical_bias="0.159" />

</androidx.constraintlayout.widget.ConstraintLayout>